--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,28 @@
-# Auto detect text files and perform LF normalization
-* text=auto
+<!DOCTYPE html>
+<html lang="pt">
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Afonso</title>
+  <style>
+    body, html {
+      height: 100%;
+      margin: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    .content {
+      text-align: center;
+    }
+  </style>
+</head>
+<body>
+  <div class="content">
+    <h1>About Me</h1>
+    <img src="https://i.postimg.cc/VS2YGxnN/sleeping.jpg" alt="Sleeping Image">
+    <p>My name is Afonso. I'm 30 years old, and I like to sleep.</p>
+  </div>
+</body>
+</html>
